--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ requests==2.31.0
 feedparser==6.0.10
 python-dateutil==2.8.2
 anthropic==0.3.11
+openai>=1.3.5
+groq>=0.3.1
 beautifulsoup4==4.12.2
 lxml==4.9.3
 pytz==2023.3
