--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Python
 __pycache__/
+src/__pycache__/
+src/tests/__pycache__/
+*.pyc
 *.py[cod]
 *$py.class
 *.so
@@ -68,3 +71,4 @@ Thumbs.db
 *.tmp
 *.temp
 .cache/
+.claude/
