Updated the module with litellm implementation, changes to readme.md

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,15 @@
 # AI News Agent Environment Variables
 # Copy this file to .env.local (or another name) and fill in your actual values
 
-# LLM Provider API Keys (set at least one)
-# Groq: https://console.groq.com/
-GROQ_API_KEY=your_groq_api_key_here
-
-# OpenAI: https://platform.openai.com/
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Anthropic: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-
-# Optional: force a provider when multiple keys are present (groq | openai | anthropic)
-AI_SUMMARIZER_PROVIDER=
+# LiteLLM summarizer configuration
+# Model names follow LiteLLM formatting (e.g., gpt-4o-mini, groq/mixtral-8x7b-32768)
+AI_SUMMARIZER_MODEL=gpt-4o-mini
+AI_SUMMARIZER_API_KEY=your_api_key_here
+AI_SUMMARIZER_API_BASE=  # e.g., "https://api.openai.com/v1"  
+AI_SUMMARIZER_PROVIDER=   # e.g., "openai", "anthropic", "groq"
+AI_SUMMARIZER_TEMPERATURE=0.3
+AI_SUMMARIZER_TOP_P= # Optional: e.g., 0.9
+AI_SUMMARIZER_MAX_TOKENS=4000
 
 # Notion Integration Token
 # Get this from: https://www.notion.so/my-integrations
